# theatre

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  godot-spatial-viewport-contracts.md  rules-template.md  tap.json
.agents/: installed.json  tap.json
.claude/rules/: contracts.md  patterns.md
.claude/skills/: design  extract-patterns  fix  gdext  godot-addon  implement  refactor-plan  research  rmcp  schemars  spectator  spectator-dev  verify
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
addons/director/: daemon.gd  editor_ops.gd  message_codec.gd  mock_editor_server.gd  operations.gd  plugin.cfg  plugin.gd
addons/spectator/: debugger_plugin.gd  dock.gd  dock.tscn  plugin.cfg  plugin.gd  runtime.gd  spectator.gdextension
addons/stage/: debugger_plugin.gd  dock.gd  dock.tscn  plugin.cfg  plugin.gd  runtime.gd  stage.gdextension
crates/director/: Cargo.toml
crates/director/src/: backend.rs  daemon.rs  diagnostics.rs  editor.rs  error.rs  lib.rs  main.rs  oneshot.rs  resolve.rs  responses.rs  server.rs
crates/director/src/mcp/: animation.rs  defaults.rs  gridmap.rs  meta.rs  mod.rs  node.rs  physics.rs  project.rs  resource.rs  scene.rs  shader.rs  signal.rs  tilemap.rs
crates/director/tests/: cli_integration.rs
crates/spectator-core/: Cargo.toml
crates/spectator-godot/: Cargo.toml
crates/spectator-godot/src/: action_handler.rs  collector.rs  lib.rs  query_handler.rs  recorder.rs  recording_handler.rs  tcp_server.rs
crates/spectator-protocol/: Cargo.toml
crates/spectator-protocol/src/: codec.rs  connection_state.rs  handshake.rs  lib.rs  mcp_helpers.rs  messages.rs  query.rs  query_dispatch.rs  recording.rs  static_classes.rs  variant_mapping.rs
crates/spectator-server/: Cargo.toml
crates/spectator-server/src/: activity.rs  cli.rs  clip_analysis.rs  config.rs  lib.rs  main.rs  recording_analysis.rs  server.rs  tcp.rs
crates/spectator-server/src/mcp/: action.rs  clips.rs  config.rs  conversions.rs  defaults.rs  delta.rs  inspect.rs  mod.rs  query.rs  recording.rs  responses.rs  scene_tree.rs  snapshot.rs  watch.rs
crates/spectator-server/tests/: cli_binary.rs  cli_journeys.rs  e2e_journeys.rs  scenarios.rs  tcp_mock.rs
crates/spectator-server/tests/support/: cli_fixture.rs  e2e_harness.rs  fixtures.rs  godot_process.rs  harness.rs  mock_addon.rs  mod.rs
crates/stage-core/: Cargo.toml
crates/stage-godot/: Cargo.toml
crates/stage-godot/src/: action_handler.rs  collector.rs  lib.rs  query_handler.rs  recorder.rs  recording_handler.rs  tcp_server.rs
crates/stage-protocol/: Cargo.toml
crates/stage-server/: Cargo.toml
crates/stage-server/src/: activity.rs  cli.rs  clip_analysis.rs  config.rs  lib.rs  main.rs  server.rs  tcp.rs
crates/stage-server/src/mcp/: action.rs  clips.rs  config.rs  conversions.rs  delta.rs  inspect.rs  mod.rs  query.rs  responses.rs  scene_tree.rs  snapshot.rs  watch.rs
crates/stage-server/tests/: cli_binary.rs  cli_journeys.rs  e2e_journeys.rs  scenarios.rs  tcp_mock.rs
crates/stage-server/tests/support/: cli_fixture.rs  e2e_harness.rs  fixtures.rs  godot_process.rs  harness.rs  mock_addon.rs  mod.rs
crates/theatre-cli/: Cargo.toml
crates/theatre-cli/src/: deploy.rs  enable.rs  init.rs  install.rs  main.rs  mcp.rs  paths.rs  project.rs  rules.rs  telemetry.rs
crates/theatre-cli/tests/: cli_integration.rs
crates/theatre-docs-gen/: Cargo.toml
crates/theatre-docs-gen/src/: main.rs
docs/: CONTRACT.md  DIRECTOR-ROADMAP.md  DOCS-AUDIT-REPORT.md  ROADMAP.md  SPEC.md  TECH.md  THEATRE-MIGRATION.md  USER_STORIES.md  UX.md  VISION.md  director-spec.md  godot-forge-spec.md  test-quality-director.md
docs/design/: CLIP-SCREENSHOTS.md  DASHCAM-ONLY-REFACTOR.md  E2E-JOURNEY-TESTS.md  GDEXT-TESTING.md  GODOT-NAMING.md  INTEGRATION-TESTS.md  M0-SKELETON.md  M1-SNAPSHOT.md  M10-RESOURCE-INSPECTION.md  M11-DASHCAM-TESTS.md  M3-ACTIONS-QUERIES.md  M4-DELTAS-WATCHES.md  M5-CONFIGURATION.md  M6-EDITOR-DOCK.md  M7-RECORDING-CAPTURE.md  M9-2D-SUPPORT.md  MCP-TOOL-UX.md  REFACTOR-M1-M2.md  REFACTOR-M6-M9.md  REFACTOR-MCP-HANDLERS.md  REMOVE-EXPLICIT-RECORDING.md  VERIFICATION-M6-M8.md  VERIFICATION-M8-M9.md  agent-cli.md  auto-docs-part1-contracts.md  auto-docs-part2-vitepress.md  cli-journey-tests.md  code-markers.md  director-journey-e2e-tests.md  director-phase10-wiring-deferred.md  director-phase4-resources.md  director-phase5-tilemap-gridmap.md  director-phase9-meta-operations.md  docs-alignment.md  (+18 more)
scripts/: copy-gdext.sh  install-release.sh  install-standalone.sh  release.sh  theatre-deploy
site/: changelog.md  index.md  package-lock.json  package.json
skills/: spectator
tests/director-tests/: Cargo.toml
tests/director-tests/src/: harness.rs  lib.rs  test_animation.rs  test_batch.rs  test_cli.rs  test_cli_journey.rs  test_daemon.rs  test_deferred.rs  test_editor.rs  test_gaps.rs  test_gridmap.rs  test_instance.rs  test_journey.rs  test_journey_3d_scene.rs  test_journey_animation.rs  test_journey_batch.rs  test_journey_composition.rs  test_journey_daemon.rs  test_journey_diff.rs  test_journey_full_game.rs  test_journey_gridmap.rs  test_journey_physics.rs  test_journey_platformer.rs  test_journey_project.rs  test_journey_project_settings.rs  test_journey_resources.rs  test_journey_search.rs  test_journey_shader.rs  test_journey_tilemap.rs  test_journey_ui.rs  test_node.rs  test_physics.rs  test_project.rs  test_project_reload.rs  test_reparent.rs  test_resource.rs  test_resource_create.rs  test_scene.rs  test_scene_diff.rs  test_scene_list.rs  (+4 more)
tests/live-tests/: Cargo.toml
tests/live-tests/src/: lib.rs  test_director_stage.rs  test_physics.rs  test_screenshots.rs  test_watch_gameplay.rs
tests/live-tests/src/harness/: assertions.rs  backend.rs  cli_backend.rs  dispatch.rs  godot_process.rs  macros.rs  mcp_backend.rs  mod.rs
tests/wire-tests/: Cargo.toml
tests/wire-tests/src/: harness.rs  lib.rs  test_actions.rs  test_clips.rs  test_connection_resilience.rs  test_handshake.rs  test_inspect.rs  test_recording.rs  test_scene_tree.rs  test_snapshot.rs  test_spatial_query.rs
(+235 files in other folders)
