[workspace]
resolver = "2"
members = [
    "crates/spectator-server",
    "crates/spectator-godot",
    "crates/spectator-protocol",
    "crates/spectator-core",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/spectator-godot/spectator"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
spectator-protocol = { path = "crates/spectator-protocol" }
spectator-core = { path = "crates/spectator-core" }
