[workspace]
resolver = "2"
members = [
    "crates/spectator-server",
    "crates/spectator-godot",
    "crates/spectator-protocol",
    "crates/spectator-core",
    "crates/director",
    "crates/theatre-docs-gen",
    "tests/wire-tests",
    "tests/director-tests",
]

# Exclude wire-tests and director-tests from `cargo build --workspace` (they need Godot at runtime).
default-members = [
    "crates/spectator-server",
    "crates/spectator-godot",
    "crates/spectator-protocol",
    "crates/spectator-core",
    "crates/director",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/nklisch/theatre"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.33", features = ["bundled"] }
rmp-serde = "1"
spectator-protocol = { path = "crates/spectator-protocol" }
spectator-core = { path = "crates/spectator-core" }
