[workspace]
resolver = "2"
members = [
    "crates/stage-server",
    "crates/stage-godot",
    "crates/stage-protocol",
    "crates/stage-core",
    "crates/director",
    "crates/theatre-docs-gen",
    "crates/theatre-cli",
    "tests/wire-tests",
    "tests/director-tests",
    "tests/live-tests",
]

# Exclude wire-tests and director-tests from `cargo build --workspace` (they need Godot at runtime).
default-members = [
    "crates/stage-server",
    "crates/stage-godot",
    "crates/stage-protocol",
    "crates/stage-core",
    "crates/director",
    "crates/theatre-cli",
]

[workspace.package]
version = "0.3.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/nklisch/theatre"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.33", features = ["bundled"] }
rmp-serde = "1"
stage-protocol = { path = "crates/stage-protocol" }
stage-core = { path = "crates/stage-core" }
