[package]
name = "director"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "director"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
spectator-protocol = { workspace = true, features = ["mcp", "async"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars = "1"
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow = "1"
thiserror = "2"
which = "7"

[dev-dependencies]
tempfile = "3"
