[package]
name = "spectator-godot"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
spectator-protocol.workspace = true
godot = { version = "0.4", features = ["api-4-2", "experimental-godot-api"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
rusqlite.workspace = true
rmp-serde.workspace = true
