[package]
name = "spectator-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["io-util"], optional = true }

[dev-dependencies]
rmp-serde.workspace = true

[features]
default = []
async = ["tokio"]
