[package]
name = "spectator-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "spectator-server"
path = "src/main.rs"

[dependencies]
spectator-protocol = { workspace = true, features = ["async"] }
spectator-core.workspace = true
rmcp = { version = "0.16", features = ["server", "transport-io"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars = "1"
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
