[package]
name = "spectator-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "spectator-server"
path = "src/main.rs"

[dependencies]
spectator-protocol = { workspace = true, features = ["async"] }
spectator-core.workspace = true
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars = "1"
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
rusqlite.workspace = true
rmp-serde.workspace = true

[features]
integration-tests = []
e2e-tests = []

[dev-dependencies]
tempfile = "3"

[[test]]
name = "tcp_mock"
path = "tests/tcp_mock.rs"
required-features = ["integration-tests"]

[[test]]
name = "scenarios"
path = "tests/scenarios.rs"
required-features = ["integration-tests"]

[[test]]
name = "e2e_journeys"
path = "tests/e2e_journeys.rs"
required-features = ["e2e-tests"]
