[package]
name = "stage-godot"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
stage-protocol.workspace = true
godot = { version = "0.4", features = ["api-4-5", "experimental-godot-api", "lazy-function-tables"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
rusqlite.workspace = true
rmp-serde.workspace = true
