[package]
name = "theatre-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "theatre"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
