[package]
name = "theatre-docs-gen"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "theatre-docs-gen"
path = "src/main.rs"

[dependencies]
stage-server = { path = "../stage-server", default-features = false }
director = { path = "../director", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
