[package]
name = "live-tests"
version = "0.0.0"
edition = "2024"
publish = false

# Ad-hoc live journey tests requiring a display and Godot binary.
# Run with: cargo test -p live-tests -- --include-ignored --nocapture
# NOT for CI — requires GPU, display, and windowed Godot.

[lib]
name = "live_tests"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
stage-server = { path = "../../crates/stage-server" }
stage-protocol = { path = "../../crates/stage-protocol" }
rmcp = { version = "0.16", features = ["server"] }
